--- a/UNUSEDPLUGINS/Camera/Camera.ui
+++ b/UNUSEDPLUGINS/Camera/Camera.ui
@@ -40,7 +40,7 @@
      <number>0</number>
     </property>
     <item row="0" column="0" colspan="3">
-     <widget class="QCameraViewfinder" name="viewfinder" native="true"/>
+     <widget class="QVideoWidget" name="viewfinder" native="true"/>
     </item>
     <item row="1" column="0" colspan="3">
      <widget class="QWidget" name="widget" native="true">
@@ -110,9 +110,9 @@
  </widget>
  <customwidgets>
   <customwidget>
-   <class>QCameraViewfinder</class>
+   <class>QVideoWidget</class>
    <extends>QWidget</extends>
-   <header>qcameraviewfinder.h</header>
+   <header>qvideowidget.h</header>
    <container>1</container>
   </customwidget>
  </customwidgets>
