--- a/plugins/Camera/Camera.ui
+++ b/plugins/Camera/Camera.ui
@@ -6,15 +6,27 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>292</width>
-    <height>265</height>
+    <width>305</width>
+    <height>244</height>
    </rect>
   </property>
   <property name="windowTitle">
    <string>Camera</string>
   </property>
   <widget class="QWidget" name="centralwidget">
-   <layout class="QGridLayout" name="gridLayout">
+   <layout class="QGridLayout" name="gridLayout" columnstretch="1,0">
+    <property name="leftMargin">
+     <number>4</number>
+    </property>
+    <property name="topMargin">
+     <number>4</number>
+    </property>
+    <property name="rightMargin">
+     <number>4</number>
+    </property>
+    <property name="bottomMargin">
+     <number>0</number>
+    </property>
     <item row="1" column="0">
      <widget class="QPushButton" name="grab">
       <property name="font">
@@ -27,6 +39,9 @@
       </property>
      </widget>
     </item>
+    <item row="0" column="0" colspan="2">
+     <widget class="QVideoWidget" name="viewfinder" native="true"/>
+    </item>
     <item row="1" column="1">
      <widget class="QCheckBox" name="erasePrevious">
       <property name="font">
@@ -38,9 +53,6 @@
        <string>erase previous</string>
       </property>
      </widget>
-    </item>
-    <item row="0" column="0" colspan="2">
-     <widget class="QVideoWidget" name="viewfinder" native="true"/>
     </item>
    </layout>
   </widget>
