--- a/UIs/nOpenRAW.ui
+++ b/UIs/nOpenRAW.ui
@@ -6,7 +6,7 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>201</width>
+    <width>203</width>
     <height>236</height>
    </rect>
   </property>
@@ -89,7 +89,7 @@
      </widget>
     </item>
     <item row="1" column="1">
-     <widget class="QSpinBox" name="width">
+     <widget class="QSpinBox" name="widthSB">
       <property name="font">
        <font>
         <pointsize>10</pointsize>
@@ -119,7 +119,7 @@
      </widget>
     </item>
     <item row="2" column="1">
-     <widget class="QSpinBox" name="height">
+     <widget class="QSpinBox" name="heightSB">
       <property name="font">
        <font>
         <pointsize>10</pointsize>
@@ -149,7 +149,7 @@
      </widget>
     </item>
     <item row="3" column="1">
-     <widget class="QSpinBox" name="skip">
+     <widget class="QSpinBox" name="skipSB">
       <property name="font">
        <font>
         <pointsize>10</pointsize>
