--- a/plugins/Box_lineout/Box_lineout.ui
+++ b/plugins/Box_lineout/Box_lineout.ui
@@ -104,7 +104,7 @@
          </widget>
         </item>
         <item row="0" column="1">
-         <widget class="QLineEdit" name="sum">
+         <widget class="QLineEdit" name="sumLE">
           <property name="font">
            <font>
             <pointsize>10</pointsize>
@@ -119,14 +119,14 @@
          </widget>
         </item>
         <item row="3" column="1">
-         <widget class="QLineEdit" name="surface">
+         <widget class="QLineEdit" name="surfaceLE">
           <property name="readOnly">
            <bool>true</bool>
           </property>
          </widget>
         </item>
         <item row="1" column="1">
-         <widget class="QLineEdit" name="mean">
+         <widget class="QLineEdit" name="meanLE">
           <property name="font">
            <font>
             <pointsize>10</pointsize>
@@ -153,7 +153,7 @@
          </widget>
         </item>
         <item row="2" column="1">
-         <widget class="QLineEdit" name="variance">
+         <widget class="QLineEdit" name="varianceLE">
           <property name="font">
            <font>
             <pointsize>10</pointsize>
@@ -235,7 +235,7 @@
    <addaction name="separator"/>
    <addaction name="actionRect"/>
   </widget>
-  <widget class="QStatusBar" name="statusBar">
+  <widget class="QStatusBar" name="statusbar">
    <property name="font">
     <font>
      <pointsize>10</pointsize>
