--- a/plugins/Monitor/Monitor.ui
+++ b/plugins/Monitor/Monitor.ui
@@ -6,15 +6,15 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>297</width>
-    <height>258</height>
+    <width>321</width>
+    <height>249</height>
    </rect>
   </property>
   <property name="windowTitle">
    <string>Monitor</string>
   </property>
   <widget class="QWidget" name="centralwidget">
-   <layout class="QGridLayout" name="gridLayout_2">
+   <layout class="QGridLayout" name="gridLayout_2" rowstretch="0,0,1">
     <property name="leftMargin">
      <number>2</number>
     </property>
@@ -27,7 +27,7 @@
     <property name="bottomMargin">
      <number>2</number>
     </property>
-    <item row="1" column="0">
+    <item row="2" column="0">
      <widget class="QListView" name="listView">
       <property name="font">
        <font>
@@ -61,7 +61,7 @@
         <number>0</number>
        </property>
        <item row="0" column="0">
-        <widget class="QToolButton" name="changeDir">
+        <widget class="QToolButton" name="changeDirB">
          <property name="toolTip">
           <string>Change directory</string>
          </property>
@@ -69,7 +69,7 @@
           <string>...</string>
          </property>
          <property name="icon">
-          <iconset resource="../../../build-neutrinoMaster-Brew-Debug/src/qrc/icons.qrc">
+          <iconset resource="../../../build-neutrino-Desktop_x86_darwin_generic_mach_o_32bit-Debug/src/qrc/icons.qrc">
            <normaloff>:/icons/dir.png</normaloff>:/icons/dir.png</iconset>
          </property>
          <property name="iconSize">
@@ -77,48 +77,6 @@
            <width>20</width>
            <height>20</height>
           </size>
-         </property>
-        </widget>
-       </item>
-       <item row="1" column="1">
-        <widget class="QLineEdit" name="pattern">
-         <property name="font">
-          <font>
-           <pointsize>10</pointsize>
-          </font>
-         </property>
-         <property name="text">
-          <string>*.*</string>
-         </property>
-         <property name="neutrinoSave" stdset="0">
-          <bool>true</bool>
-         </property>
-        </widget>
-       </item>
-       <item row="1" column="2">
-        <widget class="QCheckBox" name="erase">
-         <property name="font">
-          <font>
-           <pointsize>10</pointsize>
-          </font>
-         </property>
-         <property name="text">
-          <string>Erase</string>
-         </property>
-         <property name="neutrinoSave" stdset="0">
-          <bool>true</bool>
-         </property>
-        </widget>
-       </item>
-       <item row="0" column="1" colspan="4">
-        <widget class="QLineEdit" name="dirName">
-         <property name="font">
-          <font>
-           <pointsize>10</pointsize>
-          </font>
-         </property>
-         <property name="neutrinoSave" stdset="0">
-          <bool>true</bool>
          </property>
         </widget>
        </item>
@@ -134,7 +92,52 @@
          </property>
         </widget>
        </item>
-       <item row="1" column="3">
+       <item row="0" column="1" colspan="4">
+        <widget class="QLineEdit" name="dirName">
+         <property name="font">
+          <font>
+           <pointsize>10</pointsize>
+          </font>
+         </property>
+         <property name="neutrinoSave" stdset="0">
+          <bool>true</bool>
+         </property>
+        </widget>
+       </item>
+       <item row="1" column="1" colspan="4">
+        <widget class="QLineEdit" name="pattern">
+         <property name="font">
+          <font>
+           <pointsize>10</pointsize>
+          </font>
+         </property>
+         <property name="text">
+          <string>*.*</string>
+         </property>
+         <property name="neutrinoSave" stdset="0">
+          <bool>true</bool>
+         </property>
+        </widget>
+       </item>
+      </layout>
+     </widget>
+    </item>
+    <item row="1" column="0">
+     <widget class="QWidget" name="widget_2" native="true">
+      <layout class="QHBoxLayout" name="horizontalLayout">
+       <property name="leftMargin">
+        <number>0</number>
+       </property>
+       <property name="topMargin">
+        <number>0</number>
+       </property>
+       <property name="rightMargin">
+        <number>0</number>
+       </property>
+       <property name="bottomMargin">
+        <number>0</number>
+       </property>
+       <item>
         <widget class="QCheckBox" name="oneClick">
          <property name="font">
           <font>
@@ -142,14 +145,29 @@
           </font>
          </property>
          <property name="text">
-          <string>1-Click</string>
+          <string>1-Click open</string>
          </property>
          <property name="neutrinoSave" stdset="0">
           <bool>true</bool>
          </property>
         </widget>
        </item>
-       <item row="1" column="4">
+       <item>
+        <widget class="QCheckBox" name="erase">
+         <property name="font">
+          <font>
+           <pointsize>10</pointsize>
+          </font>
+         </property>
+         <property name="text">
+          <string>erase previous</string>
+         </property>
+         <property name="neutrinoSave" stdset="0">
+          <bool>true</bool>
+         </property>
+        </widget>
+       </item>
+       <item>
         <widget class="QPushButton" name="openAll">
          <property name="font">
           <font>
@@ -157,7 +175,7 @@
           </font>
          </property>
          <property name="text">
-          <string>All</string>
+          <string>Open all</string>
          </property>
         </widget>
        </item>
@@ -166,7 +184,7 @@
     </item>
    </layout>
   </widget>
-  <widget class="QStatusBar" name="statusBar">
+  <widget class="QStatusBar" name="statusbar">
    <property name="font">
     <font>
      <pointsize>10</pointsize>
@@ -178,7 +196,7 @@
   </widget>
  </widget>
  <resources>
-  <include location="../../../build-neutrinoMaster-Brew-Debug/src/qrc/icons.qrc"/>
+  <include location="../../../build-neutrino-Desktop_x86_darwin_generic_mach_o_32bit-Debug/src/qrc/icons.qrc"/>
  </resources>
  <connections/>
 </ui>
