--- a/plugins/Mouse_info/Mouse_info.ui
+++ b/plugins/Mouse_info/Mouse_info.ui
@@ -467,7 +467,7 @@
          </widget>
         </item>
         <item row="0" column="1">
-         <widget class="QToolButton" name="removeRow">
+         <widget class="QToolButton" name="removeRowB">
           <property name="text">
            <string>...</string>
           </property>
@@ -484,7 +484,7 @@
          </widget>
         </item>
         <item row="0" column="2">
-         <widget class="QToolButton" name="copyPoints">
+         <widget class="QToolButton" name="copyPointsB">
           <property name="text">
            <string>...</string>
           </property>
@@ -501,7 +501,7 @@
          </widget>
         </item>
         <item row="0" column="3">
-         <widget class="QToolButton" name="exportTxt">
+         <widget class="QToolButton" name="exportTxtB">
           <property name="text">
            <string>...</string>
           </property>
@@ -546,40 +546,25 @@
            <property name="text">
             <string>X</string>
            </property>
-           <property name="textAlignment">
-            <set>AlignCenter</set>
-           </property>
           </column>
           <column>
            <property name="text">
             <string>Y</string>
-           </property>
-           <property name="textAlignment">
-            <set>AlignCenter</set>
            </property>
           </column>
           <column>
            <property name="text">
             <string>Real X</string>
            </property>
-           <property name="textAlignment">
-            <set>AlignCenter</set>
-           </property>
           </column>
           <column>
            <property name="text">
             <string>Real Y</string>
            </property>
-           <property name="textAlignment">
-            <set>AlignCenter</set>
-           </property>
           </column>
           <column>
            <property name="text">
             <string>Value</string>
-           </property>
-           <property name="textAlignment">
-            <set>AlignCenter</set>
            </property>
           </column>
          </widget>
@@ -614,9 +599,9 @@
   <tabstop>dx_dy</tabstop>
   <tabstop>dy_dx</tabstop>
   <tabstop>getpoints</tabstop>
-  <tabstop>removeRow</tabstop>
-  <tabstop>copyPoints</tabstop>
-  <tabstop>exportTxt</tabstop>
+  <tabstop>removeRowB</tabstop>
+  <tabstop>copyPointsB</tabstop>
+  <tabstop>exportTxtB</tabstop>
   <tabstop>points</tabstop>
   <tabstop>tabWidget</tabstop>
  </tabstops>
