--- a/plugins/Ghost_fringes/Ghost_fringes.ui
+++ b/plugins/Ghost_fringes/Ghost_fringes.ui
@@ -151,6 +151,12 @@
        </property>
        <item row="0" column="0">
         <widget class="QDoubleSpinBox" name="resolution">
+         <property name="decimals">
+          <number>4</number>
+         </property>
+         <property name="maximum">
+          <double>9999.989999999999782</double>
+         </property>
          <property name="value">
           <double>1.000000000000000</double>
          </property>
